Revision history for App-Nopaste

0.91    Sun Jan 27 2013
        Decode incoming text as utf8 (Jesse Luehrs)
        Support for GITHUB_USER and GITHUB_PASS (Rafael Kitover)
        Name the gist file `nopaste` not `nopaste.txt` for possible syntax highlighting (Rafael Kitover)
        Use decode_json not a regular expression to decode Gist response body (Shawn M Moore)

0.90    Tue Oct 30 2012
        Port from Moose and MooseX::Getopt to Getopt::Long::Descriptive (frew)
            App::Nopaste is not using any interesting Moose features,
            so it doesn't make sense to pay the startup cost (even
            though it's probably dominated by network latency)

            Please report any regressions!

0.35    Tue Jul 17 2012
        Don't barf when gist-ing STDIN. (Ricardo SIGNES)

0.34    Sat Jul 14 2012
        Support for GitHub's v3 API [Вячеслав Тихановский (vti)]
            Thanks also to Ricardo SIGNES for the call to arms:
                http://rjbs.manxome.org/rubric/entry/1964

0.33    Thu Dec 15 2011
        Support for --description in Gist (zengargoyle@gmail.com) [rt.cpan.org #73272]

0.32    Fri Oct 21 2011
        Better error reporting (David Golden)
        Fix some attribution errors (Salvatore Bonaccorso) [rt.cpan.org #70434]

0.31    Tue Aug 30 2011
        Better filenames for ssh service (Thomas Sibley)

0.30    Fri Aug 26 2011
        Fix App::Nopaste::ssh's new filename description feature (Kevin Falcone)

0.29    Mon Aug 22 2011
        Add --private to several services (François Gannaz)
        Use Class::Load instead of require "Module/Name.pm" (Shawn M Moore)
        Document --list and --private options (François Gannaz)
        Less hardcoding of argument names to better support subclassing (Jason Mills)
        New Ubuntu service (http://paste.ubuntu.com/) (gregoa@debian.org)
        SSH: Add a small suggested Apache conf that's useful for paste directories (Thomas Sibley)